fix: removed horizontal scrollbar

--- a/src/pages/map/map.module.scss
+++ b/src/pages/map/map.module.scss
@@ -68,6 +68,7 @@
   width: 100%;
   max-height: 220px;
   overflow-y: scroll;
+  overflow-x: hidden;
   border: solid $border-width-100 $neutral-300;
   box-sizing: border-box;
   border-radius: 0 0 $border-roundness-100 $border-roundness-100;
@@ -159,7 +160,7 @@
       margin-right: -$spacer-200;
       padding: $spacer-400 0;
       padding-right: $spacer-200;
-      overflow: scroll;
+      overflow-y: scroll;
       margin-right: 0px;
       margin-bottom: 0px;
     }
